--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
 				        <div class="app-card app-card-progress-list h-100 shadow-sm">
 							<!--//Progress--
 					        <div class="app-card-header p-3">
-								<!--//Progress-->
+								<!--//Progress--
 						        <div class="row justify-content-between align-items-center">
 									<!--//Progress--
 							        <div class="col-auto">
