--- a/design.html
+++ b/design.html
@@ -182,7 +182,7 @@
 					    </li><!--//nav-item-->
 					    <li class="nav-item">
 					        <!--//Bootstrap Icons: https://icons.getbootstrap.com/ -->
-					        <a class="nav-link active" href="docs.html">
+					        <a class="nav-link active" href="design.html">
 						        <span class="nav-icon">
 									<i class="ri-image-line" style="font-size: 21px;"></i>
 						         </span>
