--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 					    </li><!--//nav-item-->
 					    <li class="nav-item">
 					        <!--//Bootstrap Icons: https://icons.getbootstrap.com/ -->
-					        <a class="nav-link" href="docs.html">
+					        <a class="nav-link" href="design.html">
 						        <span class="nav-icon">
 									<i class="ri-image-line" style="font-size: 21px;"></i>
 						         </span>
