--- a/design.html
+++ b/design.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
-    <title>Portal - Bootstrap 5 Admin Dashboard Template For Developers</title>
+    <title>Blog Andre | Design</title>
     
     <!-- Meta -->
     <meta charset="utf-8">
@@ -412,7 +412,7 @@
 						    </div>
 						    <div class="app-card-body p-3 has-card-actions">
 							    
-							    <h4 class="app-doc-title truncate mb-0"><a href="#file-link">Design Aplikasi Bca Mobile</a></h4>
+							    <h4 class="app-doc-title truncate mb-0">Design Aplikasi Bca Mobile</h4>
 							    <div class="app-doc-meta">
 								    <ul class="list-unstyled mb-0">
 									    <li><span class="text-muted">Type :</span> Image</li>
