--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
-    <title>Portal - Bootstrap 5 Admin Dashboard Template For Developers</title>
+    <title>Blog Andre | 404</title>
     
     <!-- Meta -->
     <meta charset="utf-8">
@@ -26,7 +26,7 @@
 	    <div class="row">
 		    <div class="col-12 col-md-11 col-lg-7 col-xl-6 mx-auto">
 			    <div class="app-branding text-center mb-5">
-		            <a class="app-logo" href="index.html"><img class="logo-icon me-2" src="assets/images/app-logo.svg" alt="logo"><span class="logo-text">PORTAL</span></a>
+		            <a class="app-logo" href="index.html">Blog Andre</span></a>
 	
 		        </div><!--//app-branding-->  
 			    <div class="app-card p-5 text-center shadow-sm">
@@ -44,7 +44,7 @@
     <footer class="app-footer">
 	    <div class="container text-center py-3">
 	         <!--/* This template is free as long as you keep the footer attribution link. If you'd like to use the template without the attribution link, you can buy the commercial license via our website: themes.3rdwavemedia.com Thank you for your support. :) */-->
-        <small class="copyright">Designed with <i class="fas fa-heart" style="color: #fb866a;"></i> by <a class="app-link" href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
+        <small class="copyright">©2021 Blog Andre. All rigths reserved</small>
 	       
 	    </div>
     </footer><!--//app-footer-->
