--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
-    <title>Andrep13_</title>
+    <title>Blog Andre</title>
     
     <!-- Meta -->
     <meta charset="utf-8">
