--- a/design.html
+++ b/design.html
@@ -387,7 +387,7 @@
 						    <div class="row gx-5 gy-3">
 						        <div class="col-12 col-lg-9">
 							        
-							        <div>Klik Sebelah Kanan / Kiri Pada Gambar Untuk Menggeser Gambar Keberikutnya / Sebelumnya.</div>
+							        <div>Klik Sebelah Kanan / Kiri Pada Gambar Untuk Menggeser Gambar Berikutnya / Sebelumnya.</div>
 							    </div><!--//col-->
 						    </div><!--//row-->
 						    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
