--- a/design.html
+++ b/design.html
@@ -402,10 +402,10 @@
 					    <div class="app-card app-card-doc shadow-sm  h-100">
 						    <div class="app-card-thumb-holder p-3">
 							    <div class="app-card-thumb">
-	                                <a class="example-image-link" href="assets/images/Design/Design-1/1.png" data-lightbox="design-1" data-title="Design Aplikasi Bca Mobile"><img class="thumb-image" src="https://i.ibb.co/LnZffwh/0060AF.png" alt=""/></a>
-      								<a class="example-image-link" href="assets/images/Design/Design-1/2.png" data-lightbox="design-1" data-title="Design Aplikasi Bca Mobile"><img class="example-image" src="assets/images/Design/Design-1/2.png" alt="" /></a>
-      								<a class="example-image-link" href="assets/images/Design/Design-1/3.png" data-lightbox="design-1" data-title="Design Aplikasi Bca Mobile"><img class="example-image" src="assets/images/Design/Design-1/3.png" alt="" /></a>
-      								<a class="example-image-link" href="assets/images/Design/Design-1/4.png" data-lightbox="design-1" data-title="Design Aplikasi Bca Mobile"><img class="example-image" src="assets/images/Design/Design-1/4.png" alt="" /></a>
+	                                <a class="example-image-link" href="assets/images/Design/Design-1/1.png" data-lightbox="design-1" data-title="Design Aplikasi Bca Mobile" style="pointer-events: none;"><img class="thumb-image" src="https://i.ibb.co/LnZffwh/0060AF.png" alt="" style="pointer-events: none;"/></a>
+      								<a class="example-image-link" href="assets/images/Design/Design-1/2.png" data-lightbox="design-1" data-title="Design Aplikasi Bca Mobile" style="pointer-events: none;"><img class="example-image" src="assets/images/Design/Design-1/2.png" alt="" style="pointer-events: none;"/></a>
+      								<a class="example-image-link" href="assets/images/Design/Design-1/3.png" data-lightbox="design-1" data-title="Design Aplikasi Bca Mobile" style="pointer-events: none;"><img class="example-image" src="assets/images/Design/Design-1/3.png" alt="" style="pointer-events: none;"/></a>
+      								<a class="example-image-link" href="assets/images/Design/Design-1/4.png" data-lightbox="design-1" data-title="Design Aplikasi Bca Mobile" style="pointer-events: none;"><img class="example-image" src="assets/images/Design/Design-1/4.png" alt="" style="pointer-events: none;"/></a>
 									  <span class="badge bg-success">NEW</span>
 								</div>
 	                             
