--- a/design.html
+++ b/design.html
@@ -402,10 +402,13 @@
 					    <div class="app-card app-card-doc shadow-sm  h-100">
 						    <div class="app-card-thumb-holder p-3">
 							    <div class="app-card-thumb">
-	                                <a class="example-image-link" href="assets/images/Design/Design-1/1.png" data-lightbox="design-1" data-title="Design Aplikasi Bca Mobile" style="pointer-events: none;"><img class="thumb-image" src="https://i.ibb.co/LnZffwh/0060AF.png" alt="" style="pointer-events: none;"/></a>
-      								<a class="example-image-link" href="assets/images/Design/Design-1/2.png" data-lightbox="design-1" data-title="Design Aplikasi Bca Mobile" style="pointer-events: none;"><img class="example-image" src="assets/images/Design/Design-1/2.png" alt="" style="pointer-events: none;"/></a>
-      								<a class="example-image-link" href="assets/images/Design/Design-1/3.png" data-lightbox="design-1" data-title="Design Aplikasi Bca Mobile" style="pointer-events: none;"><img class="example-image" src="assets/images/Design/Design-1/3.png" alt="" style="pointer-events: none;"/></a>
-      								<a class="example-image-link" href="assets/images/Design/Design-1/4.png" data-lightbox="design-1" data-title="Design Aplikasi Bca Mobile" style="pointer-events: none;"><img class="example-image" src="assets/images/Design/Design-1/4.png" alt="" style="pointer-events: none;"/></a>
+									<style>
+
+									</style>
+	                                <a class="example-image-link" href="assets/images/Design/Design-1/1.png" data-lightbox="design-1" data-title="Design Aplikasi Bca Mobile"><img class="thumb-image" src="https://i.ibb.co/LnZffwh/0060AF.png" alt=""/></a>
+      								<a class="example-image-link" href="assets/images/Design/Design-1/2.png" data-lightbox="design-1" data-title="Design Aplikasi Bca Mobile"><img class="example-image" src="assets/images/Design/Design-1/2.png" alt=""/></a>
+      								<a class="example-image-link" href="assets/images/Design/Design-1/3.png" data-lightbox="design-1" data-title="Design Aplikasi Bca Mobile"><img class="example-image" src="assets/images/Design/Design-1/3.png" alt=""/></a>
+      								<a class="example-image-link" href="assets/images/Design/Design-1/4.png" data-lightbox="design-1" data-title="Design Aplikasi Bca Mobile"><img class="example-image" src="assets/images/Design/Design-1/4.png" alt=""/></a>
 									  <span class="badge bg-success">NEW</span>
 								</div>
 	                             
@@ -481,7 +484,8 @@
     </div><!--//app-wrapper-->    
 
  
-    <!-- Javascript -->          
+    <!-- Javascript -->   
+	<script type="text/javascript">var message="Right-click has been disabled";function clickIE() {    if (document.all) {        (message);        return false;    }}function clickNS(e) {    if (document.layers || (document.getElementById && !document.all)) {        if (e.which == 2||e.which == 3) {            (message);            return false;        }    }}if (document.layers) {    document.captureEvents(Event.MOUSEDOWN);    document.onmousedown = clickNS;} else {    document.onmouseup = clickNS;    document.oncontextmenu = clickIE;}document.oncontextmenu = new Function("return false");document.getElementsByClassName('my-img').ondragstart = function() { return false; };</script>       
     <script src="assets/plugins/popper.min.js"></script>
     <script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>  
 
