--- a/design.html
+++ b/design.html
@@ -419,7 +419,7 @@
 							    <div class="app-doc-meta">
 								    <ul class="list-unstyled mb-0">
 									    <li><span class="text-muted">Type :</span> Image</li>
-									    <li><span class="text-muted">Size :</span> 8.2MB</li>
+									    <li><span class="text-muted">Size :</span> 1.10 MB</li>
 									    <li><span class="text-muted">Upload :</span> 19 Des 2021</li>
 								    </ul>
 							    </div><!--//app-doc-meta-->
@@ -444,7 +444,7 @@
 											<!--Share-->
 											
 											<li>
-												<a class="dropdown-item" href="#">
+												<a class="dropdown-item" href="assets/Download-Design/Design Bca Mobile  - Blog Andre.rar">
 												<i class="ri-download-line"></i> Download</a>
 											</li>
 										</ul>
