--- a/design.html
+++ b/design.html
@@ -37,7 +37,7 @@
 				    </div><!--//col--
 		            <div class="search-mobile-trigger d-sm-none col">
 			            <i class="search-mobile-trigger-icon fas fa-search"></i>
-			        </div><!--//col-->
+			        </div><!--//col--
 		            <div class="app-search-box col">
 
 		                <form class="app-search-form">   
@@ -444,7 +444,7 @@
 											<!--Share-->
 											
 											<li>
-												<a class="dropdown-item" href="assets/Download-Design/Design Bca Mobile  - Blog Andre.rar">
+												<a class="dropdown-item" href="Download/Design-1/">
 												<i class="ri-download-line"></i> Download</a>
 											</li>
 										</ul>
