--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				    </div><!--//col--
 		            <div class="search-mobile-trigger d-sm-none col">
 			            <i class="search-mobile-trigger-icon fas fa-search"></i>
-			        </div><!--//col-->
+			        </div><!--//col--
 		            <div class="app-search-box col">
 
 		                <form class="app-search-form">   
