--- a/design.html
+++ b/design.html
@@ -444,7 +444,7 @@
 											<!--Share-->
 											
 											<li>
-												<a class="dropdown-item" href="Download/Design-1/">
+												<a class="dropdown-item" href="Pages/Design-1/">
 												<i class="ri-download-line"></i> Download</a>
 											</li>
 										</ul>
