--- a/Pages/Design-1/Download/index.html
+++ b/Pages/Design-1/Download/index.html
@@ -50,7 +50,7 @@
       ></path>
     </svg>
   </section>
-  <!-- Akhir About -->
+  <!-- Akhir About --
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" />
   <a id="popuplink" href="#inline" style="display:none;"></a>
   <div id="inline" style="display:none;text-align:center;">
