--- a/Pages/Design-1/index.html
+++ b/Pages/Design-1/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" type="image/x-icon" href="https://i.ibb.co/SvpZ24b/Logo-Maker-25102021-190932.jpg">
-    <title>Login | ShopZoid</title>
+    <link rel="shortcut icon" href="./favicon.ico"> 
+    <title>Blog Andre | Login</title>
     <link rel="stylesheet" href="assets/css/login.css" />
         <script
       src="https://kit.fontawesome.com/64d58efce2.js"
@@ -129,8 +129,8 @@
               <div class="text-wrap">
                 <div class="text-group">
                   <h2>Selamat Datang</h2>
-                  <h2>Di Website ShopZoid</h2>
-                  <h2>Website Buat Toko</h2>
+                  <h2>Di Website Blog Andre</h2>
+                  <h2>Website Design</h2>
                 </div>
               </div>
 
