--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 											</span>
 									<span class="nav-link-text">Help</span>
 						        </a><!--//nav-link-->
-						    </li><!--//nav-item-->
+						    </li><!--//nav-item--
 						    <li class="nav-item">
 						        <!--//Bootstrap Icons: https://icons.getbootstrap.com/ --
 						        <a class="nav-link" href="https://themes.3rdwavemedia.com/bootstrap-templates/admin-dashboard/portal-free-bootstrap-admin-dashboard-template-for-developers/">
