--- a/index.html
+++ b/index.html
@@ -280,13 +280,13 @@
 		                         <span class="nav-link-text">Help</span>
 					        </a><!--//nav-link--
 					    </li><!--//nav-item--			    
-				    </ul><!--//app-menu-->
-			    </nav><!--//app-nav-->
+				    </ul><!--//app-menu--
+			    </nav><!--//app-nav--
 			    <div class="app-sidepanel-footer">
 				    <nav class="app-nav app-nav-footer">
 					    <ul class="app-menu footer-menu list-unstyled">
 						    <li class="nav-item">
-						        <!--//Bootstrap Icons: https://icons.getbootstrap.com/ -->
+						        <!--//Bootstrap Icons: https://icons.getbootstrap.com/ --
 						        <a class="nav-link" href="404.html">
 							        <span class="nav-icon">
 							            <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-question-circle" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -295,7 +295,7 @@
 										  </svg>
 											</span>
 									<span class="nav-link-text">Help</span>
-						        </a><!--//nav-link-->
+						        </a><!--//nav-link--
 						    </li><!--//nav-item--
 						    <li class="nav-item">
 						        <!--//Bootstrap Icons: https://icons.getbootstrap.com/ --
