--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 </svg> 20%</div>
 <!--Belum Pakai-->
 						    </div><!--//app-card-body-->
-						    <a class="app-card-link-mask" href="#"></a>
+						    <a class="app-card-link-mask"></a>
 					    </div><!--//app-card-->
 				    </div><!--//col-->
 				    
@@ -376,7 +376,7 @@
 					    <div class="app-card app-card-stat shadow-sm h-100">
 						    <div class="app-card-body p-3 p-lg-4">
 							    <h4 class="stats-type mb-1">Total Design</h4>
-							    <div class="stats-figure">1</div>
+							    <div class="stats-figure">2</div>
 								<!--Belum Pakai--
 							    <div class="stats-meta text-success">
 								    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-down" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -384,7 +384,7 @@
 </svg> 5% </div>
 <!--Belum Pakai-->
 						    </div><!--//app-card-body-->
-						    <a class="app-card-link-mask" href="#"></a>
+						    <a class="app-card-link-mask" href="design.html"></a>
 					    </div><!--//app-card-->
 				    </div><!--//col-->
 			    </div><!--//row-->
