--- a/design.html
+++ b/design.html
@@ -186,25 +186,19 @@
 						        <span class="nav-icon">
 									<i class="ri-image-line" style="font-size: 21px;"></i>
 						         </span>
-		                         <span class="nav-link-text">Blog Design</span>
+		                         <span class="nav-link-text">Design</span>
 					        </a><!--//nav-link-->
 					    </li><!--//nav-item-->
 					    
-						<!--Belum Pakai--
+						<!--Belum Pakai-->
 					    <li class="nav-item">
-					        <!--//Bootstrap Icons: https://icons.getbootstrap.com/ --
-					        <a class="nav-link" href="orders.html">
+					        <!--//Bootstrap Icons: https://icons.getbootstrap.com/ -->
+					        <a class="nav-link" href="blog.html">
 						        <span class="nav-icon">
-						        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-card-list" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-  <path fill-rule="evenodd" d="M14.5 3h-13a.5.5 0 0 0-.5.5v9a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z"/>
-  <path fill-rule="evenodd" d="M5 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 5 8zm0-2.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm0 5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5z"/>
-  <circle cx="3.5" cy="5.5" r=".5"/>
-  <circle cx="3.5" cy="8" r=".5"/>
-  <circle cx="3.5" cy="10.5" r=".5"/>
-</svg>
+									<i class="ri-article-line" style="font-size: 21px;"></i>
 						         </span>
-		                         <span class="nav-link-text">Orders</span>
-					        </a><!--//nav-link--
+		                         <span class="nav-link-text">Blog</span>
+					        </a><!--//nav-link-->
 					    </li><!--//nav-item--
 					    <li class="nav-item has-submenu">
 					        <!--//Bootstrap Icons: https://icons.getbootstrap.com/ --
