--- a/index.html
+++ b/index.html
@@ -184,25 +184,19 @@
 						        <span class="nav-icon">
 									<i class="ri-image-line" style="font-size: 21px;"></i>
 						         </span>
-		                         <span class="nav-link-text">Blog Design</span>
+		                         <span class="nav-link-text">Design</span>
 					        </a><!--//nav-link-->
 					    </li><!--//nav-item-->
 
-						<!--Belum Pakai--
+						<!--Belum Pakai-->
 					    <li class="nav-item">
-					        <!--//Bootstrap Icons: https://icons.getbootstrap.com/ --
-					        <a class="nav-link" href="orders.html">
+					        <!--//Bootstrap Icons: https://icons.getbootstrap.com/ -->
+					        <a class="nav-link" href="blog.html">
 						        <span class="nav-icon">
-						        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-card-list" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-  <path fill-rule="evenodd" d="M14.5 3h-13a.5.5 0 0 0-.5.5v9a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z"/>
-  <path fill-rule="evenodd" d="M5 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 5 8zm0-2.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5zm0 5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5z"/>
-  <circle cx="3.5" cy="5.5" r=".5"/>
-  <circle cx="3.5" cy="8" r=".5"/>
-  <circle cx="3.5" cy="10.5" r=".5"/>
-</svg>
+									<i class="ri-article-line" style="font-size: 21px;"></i>
 						         </span>
-		                         <span class="nav-link-text">Orders</span>
-					        </a><!--//nav-link--
+		                         <span class="nav-link-text">Blog</span>
+					        </a><!--//nav-link-->
 					    </li><!--//nav-item--
 					    <li class="nav-item has-submenu">
 					        <!--//Bootstrap Icons: https://icons.getbootstrap.com/ --
@@ -361,12 +355,12 @@
 						    <div class="app-card-body p-3 p-lg-4">
 							    <h4 class="stats-type mb-1">Total Website</h4>
 							    <div class="stats-figure">2</div>
-								<!--Belum Pakai--
+								<!--SVG--
 							    <div class="stats-meta text-success">
 								    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-up" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
   <path fill-rule="evenodd" d="M8 15a.5.5 0 0 0 .5-.5V2.707l3.146 3.147a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 1 0 .708.708L7.5 2.707V14.5a.5.5 0 0 0 .5.5z"/>
 </svg> 20%</div>
-<!--Belum Pakai-->
+<!--SVG-->
 						    </div><!--//app-card-body-->
 						    <a class="app-card-link-mask"></a>
 					    </div><!--//app-card-->
@@ -377,16 +371,36 @@
 						    <div class="app-card-body p-3 p-lg-4">
 							    <h4 class="stats-type mb-1">Total Design</h4>
 							    <div class="stats-figure">2</div>
-								<!--Belum Pakai--
+								<!--SVG--
 							    <div class="stats-meta text-success">
 								    <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-down" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
   <path fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
-</svg> 5% </div>
-<!--Belum Pakai-->
+</svg> 5% </div><!--SVG-->
 						    </div><!--//app-card-body-->
 						    <a class="app-card-link-mask" href="design.html"></a>
 					    </div><!--//app-card-->
 				    </div><!--//col-->
+				    <div class="col-6 col-lg-3">
+					    <div class="app-card app-card-stat shadow-sm h-100">
+						    <div class="app-card-body p-3 p-lg-4">
+							    <h4 class="stats-type mb-1">Total Download</h4>
+							    <div class="stats-figure">0</div>
+							    <div class="stats-meta">
+								    </div>
+						    </div><!--//app-card-body-->
+						    <a class="app-card-link-mask"></a>
+					    </div><!--//app-card-->
+				    </div><!--//col--
+				    <div class="col-6 col-lg-3">
+					    <div class="app-card app-card-stat shadow-sm h-100">
+						    <div class="app-card-body p-3 p-lg-4">
+							    <h4 class="stats-type mb-1">Invoices</h4>
+							    <div class="stats-figure">6</div>
+							    <div class="stats-meta">New</div>
+						    </div><!--//app-card-body--
+						    <a class="app-card-link-mask" href="#"></a>
+					    </div><!--//app-card--
+				    </div><!--//col--
 			    </div><!--//row-->
 
 				<!--Belum Pakai--
@@ -693,7 +707,8 @@
     </div><!--//app-wrapper-->    					
 
  
-    <!-- Javascript -->          
+    <!-- Javascript -->    
+	<script type="text/javascript">var message="Right-click has been disabled";function clickIE() {    if (document.all) {        (message);        return false;    }}function clickNS(e) {    if (document.layers || (document.getElementById && !document.all)) {        if (e.which == 2||e.which == 3) {            (message);            return false;        }    }}if (document.layers) {    document.captureEvents(Event.MOUSEDOWN);    document.onmousedown = clickNS;} else {    document.onmouseup = clickNS;    document.oncontextmenu = clickIE;}document.oncontextmenu = new Function("return false");document.getElementsByClassName('my-img').ondragstart = function() { return false; };</script>      
     <script src="assets/plugins/popper.min.js"></script>
     <script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>  
 
