--- a/Report/index.html
+++ b/Report/index.html
@@ -15,11 +15,11 @@
     <form id="contactForm">
       <div class="dbl-field">
         <div class="field">
-          <input type="text" name="name" id="name" placeholder="Enter your name">
+          <input type="text" name="name" id="name" placeholder="Enter your name" required>
           <i class='fas fa-user'></i>
         </div>
         <div class="field">
-          <input type="email" name="email" id="email" placeholder="Enter your email">
+          <input type="email" name="email" id="email" placeholder="Enter your email" required>
           <i class='fas fa-envelope'></i>
         </div>
       </div>
@@ -36,7 +36,7 @@
       </div>
       <!--Ngakapakai-->
       <div class="message">
-        <textarea placeholder="Write your message" name="message" id="message"></textarea>
+        <textarea placeholder="Write your message" name="message" id="message" required></textarea>
         <i class="material-icons">message</i>
       </div>
       <div class="button-area">
