--- a/design.html
+++ b/design.html
@@ -190,9 +190,8 @@
 					        </a><!--//nav-link-->
 					    </li><!--//nav-item-->
 					    
-						<!--Belum Pakai-->
+						<!--Belum Pakai--
 					    <li class="nav-item">
-					        <!--//Bootstrap Icons: https://icons.getbootstrap.com/ -->
 					        <a class="nav-link" href="blog.html">
 						        <span class="nav-icon">
 									<i class="ri-article-line" style="font-size: 21px;"></i>
