--- a/index.html
+++ b/index.html
@@ -188,15 +188,14 @@
 					        </a><!--//nav-link-->
 					    </li><!--//nav-item-->
 
-						<!--Belum Pakai-->
+						<!--Belum Pakai--
 					    <li class="nav-item">
-					        <!--//Bootstrap Icons: https://icons.getbootstrap.com/ -->
 					        <a class="nav-link" href="blog.html">
 						        <span class="nav-icon">
 									<i class="ri-article-line" style="font-size: 21px;"></i>
 						         </span>
 		                         <span class="nav-link-text">Blog</span>
-					        </a><!--//nav-link-->
+					        </a><!--//nav-link--
 					    </li><!--//nav-item--
 					    <li class="nav-item has-submenu">
 					        <!--//Bootstrap Icons: https://icons.getbootstrap.com/ --
