--- a/design.html
+++ b/design.html
@@ -190,15 +190,16 @@
 					        </a><!--//nav-link-->
 					    </li><!--//nav-item-->
 					    
-						<!--Belum Pakai--
+						<!--Belum Pakai-->
 					    <li class="nav-item">
 					        <a class="nav-link" href="blog.html">
 						        <span class="nav-icon">
 									<i class="ri-article-line" style="font-size: 21px;"></i>
 						         </span>
 		                         <span class="nav-link-text">Blog</span>
-					        </a><!--//nav-link-->
+					        </a>
 					    </li><!--//nav-item--
+
 					    <li class="nav-item has-submenu">
 					        <!--//Bootstrap Icons: https://icons.getbootstrap.com/ --
 					        <a class="nav-link submenu-toggle" href="#" data-bs-toggle="collapse" data-bs-target="#submenu-1" aria-expanded="false" aria-controls="submenu-1">
@@ -330,7 +331,7 @@
 		    <div class="container-xl">
 			    <div class="row g-3 mb-4 align-items-center justify-content-between">
 				    <div class="col-auto">
-			            <h1 class="app-page-title mb-0">Blog Design</h1>
+			            <h1 class="app-page-title mb-0">Design</h1>
 				    </div>
 				    <div class="col-auto">
 					     <div class="page-utilities">
