--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 </svg>
 					        </a>
 					    </div><!--//app-utility-item-->
-						<a class="btn app-btn-primary" href="Blog Andre-0_2_debug.apk">Download Aplikasi</a>
+						<a class="btn app-btn-primary" href="Stack Image-0_2_debug.apk">Download Aplikasi</a>
 			            
 						<!--Belum Pakai--
 			            <div class="app-utility-item app-user-dropdown dropdown">
